# randomgen_testu01

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dodo.py  gen_results_summary.py
results/: all_results.json  big_crush-murmur1_counter.txt  big_crush-murmur2_counter.txt  big_crush-murmur3_counter.txt  big_crush-pcg32_random_r.txt  big_crush-pcglite32_random.txt  big_crush-siphash12_key_counter.txt  big_crush-siphash14_key_counter.txt  big_crush-siphash24_counter.txt  big_crush-siphash24_key_counter.txt  big_crush-siphash24_key_counter_64.txt  big_crush-stdcpp_knuth_b.txt  big_crush-stdcpp_minstd_rand.txt  big_crush-stdcpp_minstd_rand0.txt  big_crush-stdcpp_mt19937.txt  big_crush-stdcpp_mt19937_64.txt  big_crush-stdcpp_random_device.txt  big_crush-stdcpp_ranlux48.txt  big_crush-xxh32_key_counter.txt  big_crush-xxh32_key_counter_64.txt  big_crush-xxh64_key_counter.txt  big_crush-xxh64_key_counter_64.txt  big_crush-xxh64_key_only2_counter_64.txt  big_crush-xxh64_key_only_counter_64.txt  crush-mt19937.txt  crush-mt19937_64.txt  crush-murmur1_counter.txt  crush-murmur2_counter.txt  crush-murmur3_counter.txt  crush-pcg32_random_r.txt  crush-pcglite32_random.txt  crush-siphash11_key_counter.txt  crush-siphash12_key_counter.txt  crush-siphash14_key_counter.txt  crush-siphash24_counter.txt  crush-siphash24_key_counter.txt  crush-siphash24_key_counter_64.txt  crush-stdcpp_knuth_b.txt  crush-stdcpp_minstd_rand.txt  crush-stdcpp_minstd_rand0.txt  (+39 more)
src/: CMakeLists.txt  bbattery_runner.cpp  pcg_lite.h  pcg_lite_inline.h  siphash24_ints.h  xxhash_keyonly.h
